--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,7 +1,21 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>Login logic here</h1>
+<section class="flex justify-center items-center py-10">
+    <form method="POST" class="border p-8 w-[90%]  sm:w-[60%] max-w-md space-y-4">
+        {% csrf_token %}
+        <h1 class="text-3xl font-bold text-center mb-4">Login</h1>
+
+        <input type="text" name="username" placeholder="Enter Username" class="w-full p-2 rounded bg-black border border-gray-600 text-white">
+        <input type="password" name="password" placeholder="Enter Password" class="w-full p-2 rounded bg-black border border-gray-600 text-white">
+
+        <button type="submit" class="bg-orange-500 w-full py-2 rounded font-semibold cursor-pointer">Login</button>
+
+        <p class="text-center text-sm mt-2">
+            Already have an account? <a href="{% url 'register' %}" class="text-orange-400">Register</a><br>
+            Forgotten your password? <a href="/" class="text-orange-400">Reset Here</a>
+        </p>
+    </form>
+</section>
 {% endblock %}
