--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,7 +1,47 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Home</h1>
+<section class="text-center py-10">
+    <!-- Heading -->
+    <h1 class="text-5xl sm:text-7xl font-bold">File sharing system</h1>
+    <p class="text-lg text-orange-400 pt-4">Share Fast, Share Secure</p>
+
+    {% load static %}
+    <!-- Features -->
+    <div class="max-w-[90%] sm:max-w-[60%] mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 my-10 px-4">
+        <div class="border-2 p-6 hover:shadow-lg transition">
+            <img class="mx-auto w-20" src="{% static 'images/up.svg' %}" alt="Logo" width="100">
+            <h2 class="text-xl font-semibold mb-2">Upload Files</h2>
+            <p class="text-gray-300">Send files securely to others on the same network</p>
+        </div>
+        <div class="border-2 p-6 hover:shadow-lg transition">
+            <img class="mx-auto w-20" src="{% static 'images/down.svg' %}" alt="Logo" width="100">
+            <h2 class="text-xl font-semibold mb-2">Download Files</h2>
+            <p class="text-gray-300">Join Rooms and Download files shared locally</p>
+        </div>
+        <div class="border-2 p-6 hover:shadow-lg transition">
+            <img class="mx-auto w-20" src="{% static 'images/user.svg' %}" alt="Logo" width="100">
+            <h2 class="text-xl font-semibold mb-2">Attendance</h2>
+            <p class="text-gray-300">Mark or view attendance records for your network Rooms</p>
+        </div>
+    </div>
+    </div>
+
+    <!-- Rooms -->
+    <h2 class="text-2xl font-bold mb-2">Rooms Available</h2>
+    <hr class="text-orange-400 max-w-[8%] mx-auto mb-8 border-1">
+    <div class="max-w-[80%] mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-6 px-4">
+        {% for room in rooms %}
+        <div class="border-2 p-4 text-center hover:shadow-lg transition">
+            <div class="bg-gray-300 h-32 mb-3"></div>
+            <h3 class="font-semibold">{{ room.name }}</h3>
+            <a href="{% url 'join_room' %}" class="bg-orange-500 text-black px-3 py-1 mt-2 inline-block rounded">Join Room</a>
+        </div>
+        {% endfor %}
+    </div>
+    </div>
+</section>
 {% endblock %}
