--- a/create_room/templates/create_room.html
+++ b/create_room/templates/create_room.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <section class="flex justify-center items-center py-10">
-    <form method="POST" class="border p-8 w-full max-w-md space-y-4">
+    <form method="POST" class="border p-8 w-[90%]  sm:w-[60%]  max-w-md space-y-4">
         {% csrf_token %}
         <h1 class="text-3xl font-bold text-center mb-4">Create Room</h1>
 
