--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -38,7 +38,7 @@
         <div class="border-2 p-4 text-center hover:shadow-lg transition">
             <div class="bg-gray-300 h-32 mb-3"></div>
             <h3 class="font-semibold">{{ room.name }}</h3>
-            <a href="{% url 'join_room' %}" class="bg-orange-500 text-black px-3 py-1 mt-2 inline-block rounded">Join Room</a>
+            <a href="{% url 'join_room' %}" class="bg-orange-500 text-white px-3 py-1 mt-2 inline-block rounded">Join Room</a>
         </div>
         {% endfor %}
     </div>
