--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,16 @@
 </head>
 
 <body class="flex flex-col min-h-screen w-full">
+    {% if messages %}
+    <div class="fixed top-4 right-4 space-y-2">
+        {% for message in messages %}
+        <div class="px-4 py-2 rounded {{ message.tags }} bg-green-200 text-green-800">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <!-- Navbar-->
     <nav class="bg-black border-b border-gray-500 sticky top-0 z-50">
         <!-- The hidden checkbox MUST come before the dropdown and share the same parent -->
@@ -46,8 +56,10 @@
         <div class="hidden peer-checked:block md:hidden border-t border-gray-500 bg-black mb-4">
             <a href="/" class="block px-4 py-3 text-white hover:bg-orange-500 hover:text-white">Home</a>
             {% if user.is_authenticated %}
-            <a href="{% url 'list_rooms' %}" class="block px-4 py-3 text-white hover:bg-orange-500 hover:text-white">Rooms</a>
-            <a href="{% url 'dashboard' %}" class="block px-4 py-3 text-white hover:bg-orange-500 hover:text-black">Dashboard</a>
+            <a href="{% url 'list_rooms' %}"
+                class="block px-4 py-3 text-white hover:bg-orange-500 hover:text-white">Rooms</a>
+            <a href="{% url 'dashboard' %}"
+                class="block px-4 py-3 text-white hover:bg-orange-500 hover:text-black">Dashboard</a>
             <a href="{% url 'logout' %}" class="bg-orange-500 px-4 py-1 rounded ml-3 mt-3">Logout</a>
             {% else %}
             <a href="{% url 'login' %}" class="bg-orange-500 px-4 py-1 rounded">Login / Signup</a>
@@ -66,8 +78,12 @@
     <footer class="bg-orange-500 p-4 text-center">
         <div class="space-x-4">
             <a href="/" class="hover:underline">Home</a>
-            <a href="{% url 'create_room' %}">Create Room</a>
-            <a href="{% url 'join_room' %}">Join Room</a>
+            {% if user.is_authenticated %}
+            <a href="{% url 'list_rooms' %}" class="text-white hover:text-black">Rooms</a>
+            <a href="{% url 'dashboard' %}" class=" text-white hover:text-black">Dashboard</a>
+            {% else %}
+            <a href="{% url 'login' %}" class="bg-orange-500 px-4 py-1 rounded">Login / Signup</a>
+            {% endif %}
         </div>
         <p class="mt-2">2025 - Works without data</p>
     </footer>
