--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -35,7 +35,7 @@
         <button type="submit" class="bg-orange-500 w-full py-2 rounded font-semibold cursor-pointer">Login</button>
 
         <p class="text-center text-sm mt-2">
-            Already have an account? <a href="{% url 'register' %}" class="text-orange-400">Register</a><br>
+            You don't have an Account? <a href="{% url 'register' %}" class="text-orange-400">Register</a><br>
             Forgotten your password? <a href="/" class="text-orange-400">Reset Here</a>
         </p>
     </form>
