Added the create room. Now users can create room and join one

--- a/create_room/templates/list_room.html
+++ b/create_room/templates/list_room.html
@@ -10,10 +10,13 @@
         {% for room in rooms %}
         <div class="border-2 p-4 text-center hover:shadow-lg transition mb-10">
             <div class="bg-gray-300 h-32 mb-3"></div>
-            <h3 class="font-semibold">{{ room.name }}</h3>
+            <h3 class="font-semibold">{{ room.room_name }}</h3>
+            <p class="text-sm">{{room.description}}</p>
             <a href="/" class="bg-orange-500 text-white px-3 py-1 mt-2 inline-block rounded ">Join Room</a>
         </div>
         {% endfor %}
     </div>
     </div>
 {% endblock %}
+
+type="submit" name="join_room"
