--- a/create_room/templates/list_room.html
+++ b/create_room/templates/list_room.html
@@ -16,7 +16,7 @@
             <h3 class="font-semibold">{{ room.room_name }}</h3>
             <p class="text-sm">{{room.description}}</p>
 
-            <a href="{{room.code}}" class="bg-orange-500 text-white px-3 py-1 mt-2 inline-block rounded ">Join Room</a>
+            <a href="{% url 'join_room' room.id %}" class="bg-orange-500 text-white px-3 py-1 mt-2 inline-block rounded ">Join Room</a>
 
         </div>
         {% endfor %}
@@ -24,5 +24,3 @@
     </div>
     </div>
 {% endblock %}
-
-type="submit" name="join_room
