--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         <div class="mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!--Logo -->
-                <a href="/" class="text-white text-xl font-extrabold">ODC share</a>
+                <a href="/" class="text-white text-xl font-extrabold">ODC testing share</a>
 
                 <!-- Desktop menu -->
                 <div class="hidden md:flex items-center space-x-6">
