--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
                 <!-- Desktop menu -->
                 <div class="hidden md:flex items-center space-x-6">
                     <a href="/" class="text-white hover:text-orange-500">Home</a>
+                    <a href="{% url 'about' %}" class="text-white hover:text-orange-500">About</a>
                     {% if user.is_authenticated %}
                     <a href="{% url 'list_rooms' %}" class="block text-white hover:text-orange-500">Rooms</a>
                     <a href="{% url 'dashboard' %}" class="block text-white hover:text-orange-500">Dashboard</a>
