--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
     <footer class="bg-orange-500 p-4 text-center">
         <div class="space-x-4">
             <a href="/" class="hover:underline">Home</a>
+            <a href="{% url 'about' %}">About</a>
             {% if user.is_authenticated %}
             <a href="{% url 'list_rooms' %}" class="text-white hover:text-black">Rooms</a>
             <a href="{% url 'dashboard' %}" class=" text-white hover:text-black">Dashboard</a>
